--- a/2_stocks_Financial_Analysis.ipynb
+++ b/2_stocks_Financial_Analysis.ipynb
@@ -886,7 +886,7 @@
       "metadata": {
         "id": "1PcOgKptg61I",
         "colab_type": "code",
-        "outputId": "69cfefea-22bd-4aeb-ee6d-50014536a9e3",
+        "outputId": "3257d557-7be1-467b-a8a7-007b0d0d8d33",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
@@ -895,19 +895,19 @@
       "source": [
         "TCS['returns'].hist(bins=100)"
       ],
-      "execution_count": 0,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f5e67511710>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f5e65055ba8>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 45
         },
         {
           "output_type": "display_data",
